# yolo_test

./: README.md
ROS_NCS2/: CMakeLists.txt  README.md  package.xml
ROS_NCS2/msg/: DetectionObject.msg
ROS_NCS2/src/: image_publisher.cpp  image_subscriber.cpp  image_subscriber.hpp  util.hpp
camera_detect_offb/: CMakeLists.txt
camera_detect_offb/scripts/: call_yolo.py  detect_ros.py  helpers.py  object_detection_demo_yolov3_async.py  object_detection_uav (复件).py  object_detection_uav.py  object_detection_uav1.py  target_detection_yolov3_depth_realtime.py
object_deep/src/object_detection_yolo/: CMakeLists.txt  package.xml
object_deep/src/object_detection_yolo/include/object_detection_yolo/monitors/: cpu_monitor.cpp
object_deep/src/object_detection_yolo/src/: main.cpp
rm_detector/: 0.33depth640.onnx  0.66depth640.onnx  2.0hsv640.onnx  8000nano.onnx  CMakeLists.txt  nodelet_info.xml  package.xml
rm_detector/cfg/: dynamic.cfg
rm_detector/config/: camera.yaml
rm_detector/include/rm_detector/: detector.h
rm_detector/launch/: armor_detector.launch  rm_detector.launch
rm_detector/src/: detector.cpp
rosvino/: CMakeLists.txt
rosvino/models/: class.names  classes.txt  rotate_ref_best_n.mapping  rotate_ref_best_n.xml
rosvino/src/: detect (复件).cpp  detect.cpp  img_similar.cpp  img_similar.h  local_image.cpp  local_video.cpp  person_detect.cpp  rotate_detector.cpp  rotate_detector.h  yolo_object_detection.cpp  yolo_object_detection.h  yolo_oneOutput.cpp  yolo_oneOutput.h  yolo_rotate_object_detection_onnxruntime.cpp  yolo_rotate_object_detection_onnxruntime.h  yolo_rotate_object_detection_opencv.cpp  yolov5_6vino.cpp  yolov5_6vino.h
